data/derived/sp14/progs/unify/prog3226.ml.out
Characters 59-60:
  x a
  ^
Error: This expression has type 'a list
       This is not a function; it cannot be applied.
